@@ -1,11 +1,8 @@
 package org.jabref.logic.protectedterms;
 
-import java.io.File;
-import java.io.FileNotFoundException;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -37,18 +34,17 @@ class ProtectedTermsLoaderTest {
             loader.removeProtectedTermsList(list);
         }
         assertTrue(loader.getProtectedTermsLists().isEmpty());
-        String filename = Path.of(
-                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms").toURI())
-                               .toFile().getPath();
+        String filename = Path.of(ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
+                                                            .toURI())
+                              .toFile().getPath();
         loader.addProtectedTermsListFromFile(filename, true);
-        assertEquals(Arrays.asList("Einstein"), loader.getProtectedTerms());
+        assertEquals(List.of("Einstein"), loader.getProtectedTerms());
     }
 
     @Test
     void testAddProtectedTermsListFromFile() throws URISyntaxException {
-        String filename = Path.of(
-                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
-                                          .toURI())
+        String filename = Path.of(ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
+                                                            .toURI())
                               .toFile().getPath();
         assertEquals(ProtectedTermsLoader.getInternalLists().size(), loader.getProtectedTermsLists().size());
         loader.addProtectedTermsListFromFile(filename, false);
@@ -56,48 +52,48 @@ class ProtectedTermsLoaderTest {
     }
 
     @Test
-    void testReadProtectedTermsListFromFileReadsDescription() throws URISyntaxException, FileNotFoundException {
-        File file = Path.of(
-                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms").toURI())
-                         .toFile();
+    void testReadProtectedTermsListFromFileReadsDescription() throws URISyntaxException {
+        Path file = Path.of(
+                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
+                                          .toURI());
+
         ProtectedTermsList list = ProtectedTermsLoader.readProtectedTermsListFromFile(file, true);
         assertEquals("Term list", list.getDescription());
     }
 
     @Test
-    void testReadProtectedTermsListFromFileDisabledWorks() throws URISyntaxException, FileNotFoundException {
-        File file = Path.of(
-                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms").toURI())
-                         .toFile();
+    void testReadProtectedTermsListFromFileDisabledWorks() throws URISyntaxException {
+        Path file = Path.of(ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
+                                                      .toURI());
+
         ProtectedTermsList list = ProtectedTermsLoader.readProtectedTermsListFromFile(file, false);
         assertFalse(list.isEnabled());
     }
 
     @Test
-    void testReadProtectedTermsListFromFileEnabledWorks() throws URISyntaxException, FileNotFoundException {
-        File file = Path.of(
-                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms").toURI())
-                         .toFile();
+    void testReadProtectedTermsListFromFileEnabledWorks() throws URISyntaxException {
+        Path file = Path.of(ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
+                                                      .toURI());
+
         ProtectedTermsList list = ProtectedTermsLoader.readProtectedTermsListFromFile(file, true);
         assertTrue(list.isEnabled());
     }
 
     @Test
-    void testReadProtectedTermsListFromFileIsNotInternalList() throws URISyntaxException, FileNotFoundException {
-        File file = Path.of(
-                ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms").toURI())
-                         .toFile();
+    void testReadProtectedTermsListFromFileIsNotInternalList() throws URISyntaxException {
+        Path file = Path.of(ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/namedterms.terms")
+                                                      .toURI());
+
         ProtectedTermsList list = ProtectedTermsLoader.readProtectedTermsListFromFile(file, true);
         assertFalse(list.isInternalList());
     }
 
     @Test
     void testReadProtectedTermsListFromFileNoDescriptionGivesDefaultDescription()
-            throws URISyntaxException, FileNotFoundException {
-        File file = Path.of(
+            throws URISyntaxException {
+        Path file = Path.of(
                 ProtectedTermsLoader.class.getResource("/org/jabref/logic/protectedterms/unnamedterms.terms")
-                                          .toURI())
-                         .toFile();
+                                          .toURI());
         ProtectedTermsList list = ProtectedTermsLoader.readProtectedTermsListFromFile(file, true);
         assertEquals(Localization.lang("The text after the last line starting with # will be used"),
                 list.getDescription());
@@ -105,19 +101,21 @@ class ProtectedTermsLoaderTest {
 
     @Test
     void testNewListsAreIncluded() {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(),
-                        Collections.emptyList(), Collections.emptyList(), Collections.emptyList()));
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList()));
         assertEquals(ProtectedTermsLoader.getInternalLists().size(), localLoader.getProtectedTermsLists().size());
     }
 
     @Test
     void testNewListsAreEnabled() {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(),
-                        Collections.emptyList(), Collections.emptyList(), Collections.emptyList()));
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList()));
         for (ProtectedTermsList list : localLoader.getProtectedTermsLists()) {
             assertTrue(list.isEnabled());
         }
@@ -125,10 +123,11 @@ class ProtectedTermsLoaderTest {
 
     @Test
     void testInitalizedAllInternalDisabled() {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                ProtectedTermsLoader.getInternalLists(),
+                Collections.emptyList()));
         for (ProtectedTermsList list : localLoader.getProtectedTermsLists()) {
             assertFalse(list.isEnabled());
         }
@@ -136,83 +135,92 @@ class ProtectedTermsLoaderTest {
 
     @Test
     void testUnknownExternalFileWillNotLoad() {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(ProtectedTermsLoader.getInternalLists(),
-                        Collections.singletonList("someUnlikelyNameThatNeverWillExist"), Collections.emptyList(),
-                        Collections.emptyList()));
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                ProtectedTermsLoader.getInternalLists(),
+                Collections.singletonList("someUnlikelyNameThatNeverWillExist"),
+                Collections.emptyList(),
+                Collections.emptyList()));
         assertEquals(ProtectedTermsLoader.getInternalLists().size(), localLoader.getProtectedTermsLists().size());
     }
 
     @Test
     void testAllDisabledNoWords() {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                ProtectedTermsLoader.getInternalLists(),
+                Collections.emptyList()));
         assertEquals(Collections.emptyList(), localLoader.getProtectedTerms());
     }
 
     @Test
     void testDoNotLoadTheSameInternalListTwice() {
-
         ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(ProtectedTermsLoader.getInternalLists(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
+                new ProtectedTermsPreferences(
+                        ProtectedTermsLoader.getInternalLists(),
+                        Collections.emptyList(),
+                        ProtectedTermsLoader.getInternalLists(),
+                        Collections.emptyList()));
         assertEquals(ProtectedTermsLoader.getInternalLists().size(), localLoader.getProtectedTermsLists().size());
     }
 
     @Test
     void testAddNewTermListAddsList(@TempDir Path tempDir) {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
-        localLoader.addNewProtectedTermsList("My new list", tempDir.toFile().getAbsolutePath());
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                ProtectedTermsLoader.getInternalLists(),
+                Collections.emptyList()));
+        localLoader.addNewProtectedTermsList("My new list", tempDir.resolve("MyNewList.terms").toAbsolutePath().toString());
         assertEquals(ProtectedTermsLoader.getInternalLists().size() + 1, localLoader.getProtectedTermsLists().size());
     }
 
     @Test
     void testAddNewTermListNewListInList(@TempDir Path tempDir) {
-
         ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
-        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list",
-                tempDir.toFile().getAbsolutePath());
+                new ProtectedTermsPreferences(
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        ProtectedTermsLoader.getInternalLists(),
+                        Collections.emptyList()));
+        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list", tempDir.resolve("MyNewList.terms")
+                                                                                                .toAbsolutePath()
+                                                                                                .toString());
         assertTrue(localLoader.getProtectedTermsLists().contains(newList));
     }
 
     @Test
     void testRemoveTermList(@TempDir Path tempDir) {
-
         ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
-        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list", tempDir.toFile().getAbsolutePath());
+                new ProtectedTermsPreferences(
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        ProtectedTermsLoader.getInternalLists(),
+                        Collections.emptyList()));
+        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list", tempDir.resolve("MyNewList.terms").toAbsolutePath().toString());
         assertTrue(localLoader.removeProtectedTermsList(newList));
     }
 
     @Test
     void testRemoveTermListReduceTheCount(@TempDir Path tempDir) {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
-        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list",
-                tempDir.toFile().getAbsolutePath());
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                ProtectedTermsLoader.getInternalLists(),
+                Collections.emptyList()));
+        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list", tempDir.resolve("MyNewList.terms").toAbsolutePath().toString());
         localLoader.removeProtectedTermsList(newList);
         assertEquals(ProtectedTermsLoader.getInternalLists().size(), localLoader.getProtectedTermsLists().size());
     }
 
     @Test
     void testAddNewTermListSetsCorrectDescription(@TempDir Path tempDir) {
-
-        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(
-                new ProtectedTermsPreferences(Collections.emptyList(), Collections.emptyList(),
-                        ProtectedTermsLoader.getInternalLists(), Collections.emptyList()));
-        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list",
-                tempDir.toFile().getAbsolutePath());
+        ProtectedTermsLoader localLoader = new ProtectedTermsLoader(new ProtectedTermsPreferences(
+                Collections.emptyList(),
+                Collections.emptyList(),
+                ProtectedTermsLoader.getInternalLists(),
+                Collections.emptyList()));
+        ProtectedTermsList newList = localLoader.addNewProtectedTermsList("My new list", tempDir.resolve("MyNewList.terms").toAbsolutePath().toString());
         assertEquals("My new list", newList.getDescription());
     }
 }
